# niryo_one_ros

./: .gitignore  .gitignore.orig  README.md  README.md.orig
niryo_one_bringup/config/: rpi_ros_processes.yaml  rpi_ros_processes.yaml.orig
niryo_one_bringup/launch/: desktop_rviz_simulation.launch  robot_commander.launch  robot_commander.launch.orig  rpi_setup.launch
niryo_one_commander/src/niryo_one_commander/: move_group_arm.py  move_group_arm.py.orig
niryo_one_description/config/: default_config.rviz  default_config.rviz.orig  test.rviz
niryo_one_moveit_config/config/: ompl_planning.yaml
niryo_one_user_interface/scripts/: user_interface.py  user_interface.py.orig
orthopus_interface/: CMakeLists.txt  package.xml
orthopus_interface/config/: settings.yaml
orthopus_interface/include/niryo_one_user_interface/: joystick_cartesian_interface.h
orthopus_interface/include/orthopus_interface/: cartesian_controller.h  constraints_compensator.h  device_wrapper.h  forward_kinematic.h  fsm_state_cartesian.h  inverse_kinematic.h  joystick_cartesian_interface.h  move_group_node.h  pose_manager.h  position_compensator.h  robot_manager.h  robot_manager_fsm.h  spacenav_wrapper.h  tool_controller.h  trajectory_controller.h  trajectory_manager.h  velocity_integrator.h  web_app_wrapper.h  xbox_wrapper.h
orthopus_interface/include/orthopus_interface/fsm/: event.h  state.h  state_disable.h  state_idle.h  state_joint_trajectory.h  state_space_control.h  state_space_trajectory.h
orthopus_interface/include/orthopus_interface/types/: joint_position.h  joint_velocity.h  space_base.h  space_position.h  space_velocity.h
orthopus_interface/include/orthopus_interface/utils/: fsm_engine.h  fsm_state.h  fsm_transition.h  pi_controller.h
orthopus_interface/launch/: joystick_cartesian_interface.launch
orthopus_interface/scripts/: interface.html  web_app.py
orthopus_interface/scripts/javascript/: orthopus_webui.js
orthopus_interface/scripts/templates/: index.html
orthopus_interface/src/: cartesian_controller.cpp  constraints_compensator.cpp  device_wrapper.cpp  forward_kinematic.cpp  inverse_kinematic.cpp  jacobian2dof.cpp  jacobian3dof.cpp  joystick_cartesian_interface.cpp  move_group_node.cpp  pose_manager.cpp  position_compensator.cpp  robot_manager.cpp  spacenav_wrapper.cpp  tool_controller.cpp  trajectory_controller.cpp  trajectory_manager.cpp  vel_to_pos.cpp  velocity_integrator.cpp  web_app_wrapper.cpp  xbox_to_twist.cpp  xbox_wrapper.cpp
orthopus_interface/src/fsm/: state_disable.cpp  state_idle.cpp  state_joint_trajectory.cpp  state_space_control.cpp  state_space_trajectory.cpp
orthopus_space_control/: CMakeLists.txt  package.xml
orthopus_space_control/config/: settings.yaml  spacenav_settings.yaml  xbox_settings.yaml
orthopus_space_control/include/orthopus_space_control/: cartesian_controller.h  constraints_compensator.h  forward_kinematic.h  fsm_state_cartesian.h  inverse_kinematic.h  joint_pose_manager.h  pose_manager.h  robot_manager.h  robot_manager_fsm.h  space_pose_manager.h  trajectory_controller.h  velocity_integrator.h
orthopus_space_control/include/orthopus_space_control/fsm/: engine.h  state.h  transition.h
orthopus_space_control/include/orthopus_space_control/input_device/: device.h  device_spacenav.h  device_web_app.h  device_xbox.h  spacenav_config.h  xbox_config.h
orthopus_space_control/include/orthopus_space_control/types/: joint_position.h  joint_velocity.h  space_base.h  space_position.h  space_velocity.h
orthopus_space_control/include/orthopus_space_control/utils/: csv_manager.h  fsm_engine.h  fsm_state.h  fsm_transition.h  pi_controller.h
orthopus_space_control/launch/: demo.launch
orthopus_space_control/scripts/: admin.html  interface.html
orthopus_space_control/scripts/javascript/: orthopus_webui.js
orthopus_space_control/src/: cartesian_controller.cpp  constraints_compensator.cpp  forward_kinematic.cpp  inverse_kinematic.cpp  joint_pose_manager.cpp  pose_manager.cpp  robot_manager.cpp  space_pose_manager.cpp  trajectory_controller.cpp  velocity_integrator.cpp
orthopus_space_control/src/input_device/: device.cpp  device_spacenav.cpp  device_web_app.cpp  device_xbox.cpp
orthopus_space_control/src/types/: space_base.cpp
orthopus_space_control/srv/: SetRobotAction.srv  SetUInt16.srv
qpoases_ros/: CMakeLists.txt
qpoases_ros/3.2/.svn/: wc.db
