<?xml version="1.0"?>
<package format="2">
  <name>orthopus_interface</name>
  <version>0.0.1</version>
  <description>Handles commands from joystick in order to perform cartesian control</description>
  <author>Florian Armange</author>
  <maintainer email="florian.armange@orthopus.com">Florian Armange</maintainer>
  <license>GPLv3</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>niryo_one_msgs</depend>
  <depend>qpoases_ros</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>actionlib</depend>

  <export>
  </export>
</package>

